# AndroidOpenCVCamera

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/dathdq/androidopencvcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dathdq/androidopencvcamera/: CameraActivity.java  CameraActivity.kt  MyGLSurfaceView.java  MyGLSurfaceView.kt
app/src/main/res/layout/: activity.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/dathdq/androidopencvcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary451/: build.gradle
openCVLibrary451/src/main/java/org/opencv/android/: CameraGLSurfaceView.java
